[gd_scene load_steps=6 format=3 uid="uid://xj6mcnjphnqp"]

[ext_resource type="Texture2D" uid="uid://jeuddbfsqdg" path="res://assets/Door.png" id="1_ejbek"]
[ext_resource type="Script" path="res://scripts/door.gd" id="1_olity"]
[ext_resource type="PackedScene" uid="uid://bfsw1vy5loxmt" path="res://scenes/next_level.tscn" id="1_y0l3c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gtp6p"]
size = Vector2(48, 191)

[sub_resource type="TileSet" id="TileSet_p2b5k"]
tile_size = Vector2i(48, 48)

[node name="Door" type="AnimatableBody2D"]
position = Vector2(0, 72)
script = ExtResource("1_olity")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ejbek")

[node name="NextLevel" parent="." instance=ExtResource("1_y0l3c")]

[node name="NextLevelCollider" type="CollisionShape2D" parent="NextLevel"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gtp6p")
disabled = true

[node name="DoorCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gtp6p")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_p2b5k")
